feat: add BACK_OFFICE CHEF_POLE endpoints + assigner-fse + fse-disponibles